added basic social links

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,14 @@
     <title>Grand Bequest</title>
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v11.0"
+      nonce="exeUQnJC"
+    ></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
