--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="manifest" href="./manifest.json" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
       rel="stylesheet"
@@ -52,6 +54,16 @@
       src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v11.0"
       nonce="exeUQnJC"
     ></script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register(".serviceWorker.js.js")
+            .then((reg) => console.log("Success: ", reg.scope))
+            .catch((err) => console.log(err));
+        });
+      }
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
